--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,7 @@ section{
 }
 
 /* bottoni */
-#link{
+.link{
     margin-top: 30px;
 }
 
@@ -83,6 +83,11 @@ section{
     justify-content: center;
 }
 
+#adventure{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
 /* fine Main */
 
 
