--- a/css/style.css
+++ b/css/style.css
@@ -87,40 +87,49 @@ section{
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
 }
 /* fine Main */
 
 
 /* Footer */
-footer{
-    display: flex;
-    justify-content: center;
-     /* DEBUG  */
-     background-color: aquamarine;
-}
 
 
 /* Top */
+footer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* DEBUG  */
+    background-color: aquamarine;
+}
 #footer-top{  
     display: flex;
-    padding: 20px 25%;
+    justify-content: center;
+    text-align:center;
+    
     /* DEBUG */
     background-color: blueviolet;
 }
 
 #lingue{
+    padding: 10px 20px;
    /* DEBUG  */
-   background-color: brown;
+   background-color: rgb(42, 165, 65);
 
 }
 
 .footer-menu{
-   /* DEBUG  */
-   background-color: brown;
+    padding: 10px 20px;
+    /* DEBUG  */
+    background-color: brown;
     
 }
 
 /* bottom */
 #footer-bottom{
-    width: 200px;
+    width: 100%;
+    height: 100px;
+    /* DEBUG */
+    background-color: black;
 }
